# souffleur

./: .gitignore  Cargo.toml  README.md
.githooks/: pre-push
.github/workflows/: ci.yml
crates/souffleur-engine/: Cargo.toml
crates/souffleur-engine/src/: audio.rs  corpus.rs  lib.rs  resample.rs  source.rs  stream.rs  stt.rs  suggest.rs
crates/souffleur-protocol/: Cargo.toml
crates/souffleur-protocol/src/: lib.rs
docs/plan/: COACH_PROTOCOL.md  PHASE0_RESULTS.md  PHASE1_RESULTS.md  PHASE2_RESULTS.md  PHASE3_RESULTS.md  PHASE4_RESULTS.md  PLAN.md
docs/research/: 01_commercial_competitors.md  02_open_source_alternatives.md  03_audio_stt_overlay_tech.md  04_smart_glasses.md
scripts/: ci.sh  fetch-assets.sh  launch-xreal.sh  serve-phone.sh
surfaces/glasses/: README.md
surfaces/glasses/frame/: bridge.py  frame_bridge.py  requirements.txt  test_bridge.py
surfaces/glasses/mentraos/: RUN_LIVE.md  package-lock.json  package.json  tsconfig.json
surfaces/glasses/mentraos/src/: bridge.test.ts  bridge.ts  index.ts
surfaces/overlay/src-tauri/: Cargo.toml  tauri.conf.json
surfaces/overlay/src-tauri/capabilities/: default.json
surfaces/overlay/src-tauri/src/: main.rs
surfaces/overlay/ui/: index.html
surfaces/phone/: index.html  manifest.json  sw.js
surfaces/xreal/: index.html
