[workspace]
resolver = "2"
members = [
    "crates/souffleur-protocol",
    "crates/souffleur-engine",
]
# The Tauri overlay app is an independent crate (heavy webkit deps); built on its own.
exclude = [
    "surfaces/overlay/src-tauri",
]

[workspace.package]
version = "0.0.0"
edition = "2021"
license = "AGPL-3.0-only"
repository = ""
rust-version = "1.86"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
