[package]
name = "souffleur-overlay"
version = "0.0.0"
edition = "2021"
license = "AGPL-3.0-only"
description = "Souffleur desktop overlay surface (Tauri): screen-share-excluded coach overlay"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.dev]
incremental = true
